samples/_failures_safe/1761086856_91cd65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_441afac3.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_441afac3.c:157:9: error: expected expression at end of input
  157 |         token.value[
      |         ^~~~~
./samples/SAFE/__tmp_441afac3.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_441afac3.c:157:9: error: expected declaration or statement at end of input
